# app

./: .gitignore  Cargo.toml  README.md  biome.json  build.rs  index.html  package.json  pnpm-lock.yaml  tauri.conf.json  tsconfig.app.json  tsconfig.json  uno.config.ts  vite.config.ts
app/: App.tsx  app.css.ts  app.module.css  styles.css.ts
app/components/: Button.tsx  Dialog.tsx  NodeGraph.tsx
app/components/Button/: index.tsx  styles.css.ts
app/components/Dialog/: index.tsx  style.css.ts
app/components/ErrorBox/: index.tsx  styles.css.ts  styles.module.css
app/components/GlobalOptionsNode/: index.tsx  styles.css.ts
app/components/NodeGraph/: index.tsx  styles.css.ts  styles.module.css
app/utils/: error.ts  invoke.ts
capabilities/: default.json
icons/: icon.icns
src/: channel.rs  command.rs  error.rs  event.rs  graph.rs  lib.rs  main.rs  menu.rs  state.rs
src/options/: global.rs  mod.rs
