[package]
name = "ffgraph"
version = "0.1.0"
description = "FFgraph application"
authors = ["Saurav Sharma <appdroiddeveloper@gmail.com>"]
edition = "2021"
publish = false
license = "GPL-3.0-only"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tauri = { version = "2.0.6", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

[lints.rust]
missing_docs = "warn"
anonymous_parameters = "warn"
unreachable_pub = "warn"
unsafe_code = "deny"

[lints.clippy]
all = "deny"
pedantic = "warn"
