[package]
name = "ffgraph"
version = "0.1.0"
description = "FFgraph application"
authors = ["Saurav Sharma <appdroiddeveloper@gmail.com>"]
edition = "2021"
publish = false
license = "GPL-3.0-only"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
flate2 = "1.0.34"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
specta = { version = "^2.0.0-rc.20", features = ["serde_json"] }
specta-typescript = "0.0.7"
tauri = { version = "2.1.1", features = [] }
tauri-plugin-dialog = "2.0.3"
tauri-specta = { version = "^2.0.0-rc.20", features = ["derive", "typescript"] }

[lints.rust]
missing_docs = "warn"
anonymous_parameters = "warn"
unreachable_pub = "warn"
unsafe_code = "deny"

[lints.clippy]
all = "deny"
pedantic = "warn"
